@@ -13,6 +13,7 @@ changes relative to sbcl-1.3.20:
     (find x "123" :test #'=)
   * enhancement: the tabular output of ROOM is aligned dynamically, preventing
     misaligned tables for larger sizes or counts.
+  * enhancement: ROOM reports on immobile space if applicable.
   * optimization: optimized external-format routines.
 
 changes in sbcl-1.3.20 relative to sbcl-1.3.19:
